# rust-mtc

./: Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  docker-compose.yml
mips/: README.md
scripts/: data.sh  send_btc.sh  test.sh  update_utxo.sh
src/bitcoin_test_backend/: Cargo.toml  bitcoin_test_backend.did
src/bitcoin_test_backend/src/: address.rs  bitcoin_api.rs  bitcoin_tx.rs  bitcoin_wallet.rs  ecdsa_api.rs  inscription.rs  lib.rs  main.rs  types.rs  utils.rs
src/bitcoin_test_backend/src/utils/: ecdsa_api.rs  mod.rs  utils.rs
src/bitcoin_test_backend/src/wallet/: address.rs  send_btc.rs
src/bitmail_backend/: Cargo.toml
src/bitmail_backend/src/: bitcoin_tx.rs  lib.rs  main.rs
src/bitmail_backend/src/utils/: schnnor.rs
src/mtc_backend/: Cargo.toml
src/mtc_backend/src/: lib.rs  main.rs
src/mtc_backend/src/utils/: mod.rs  types.rs
src/mtc_backend/src/wallet/: mod.rs  send_btc.rs  state.rs
src/onnx_ai/model/: tokenizer_config.json
src/onnx_ai/src/: stable_blob_storage.rs
