[package]
name = "bitcoin_test_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }


candid = "0.10.4"
ed25519-dalek = "2.1"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ripemd = "0.1.1"
serde = "1.0.132"
sha2 = "0.10.8"
hex = "0.4.3"
bitcoin = "0.32.0-rc1"
bs58 = "0.4.0"
ic-cdk-macros = "0.9.0"
icrc-ledger-types = "0.1.5"
serde_bytes = "0.11.14"
bech32 = "0.11.0"
ic-crypto-secp256k1 = { git = "https://github.com/dfinity/ic.git", branch = "master"}
ic-crypto-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", branch = "master"}
ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", branch = "master"}
lazy_static = "1.4.0"
