[package]
name = "mtc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = { version = "0.8" }
cbc = { version = "0.1"  }
base64 = "0.22.1"
serde_json = "1.0.132"
candid = "0.10.10"
ed25519-dalek = "2.1"
# ic-cdk = "0.16.0"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", branch = "main"}
ic-cdk-timers = "0.10.0" # Feel free to remove this dependency if you don't need timers
ripemd = "0.1.3"
serde = "1.0.132"
sha2 = "0.10.8"
hex = "0.4.3"
bitcoin = "0.32.0-rc1"
bs58 = "0.4.0"
ic-cdk-macros = "0.16.0"
icrc-ledger-types = "0.1.5"
serde_bytes = "0.11.14"
bech32 = "0.11.0"
ic-crypto-secp256k1 = { git = "https://github.com/dfinity/ic.git", branch = "master"}
ic-crypto-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", branch = "master"}
ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", branch = "master"}
lazy_static = "1.5.0"



# [patch.crates-io]
